# deneva

./: .gitignore  .gitmodules  .rsync-filter  CMakeLists.txt  INSTALL.md  Makefile  README.md  config-old.h  config-std.h  config.h  config_txn_gen.h  ec2_nodes.py  pthread_mac.h  qcd_kill_all.py  qcd_sync_and_build.py  quecc_aws_run_exps.py  run_local_test.sh  run_mem_test.sh  runclm  rundbm  start_node.py
.github/workflows/: main.yml
ansible/: README.md  activate_env_sample  build_run.yml  deploy.yml  init_hosts.py  provision.py
ansible/dev/group_vars/: all
ansible/logs/: node-c1.out  node-c2.out  node-p1-r1.out  node-p2-r1.out
benchmarks/: CMakeLists.txt  YCSB_schema.txt  pps.h  pps_helper.cpp  pps_helper.h  pps_query.cpp  pps_query.h  pps_txn.cpp  pps_wl.cpp  tpcc.h  tpcc_const.h  tpcc_helper.cpp  tpcc_helper.h  tpcc_query.cpp  tpcc_query.h  tpcc_txn.cpp  tpcc_wl.cpp  ycsb.h  ycsb_query.cpp  ycsb_query.h  ycsb_txn.cpp  ycsb_wl.cpp
client/: CMakeLists.txt  client_main.cpp  client_query.cpp  client_query.h  client_txn.cpp  client_txn.h
concurrency_control/: CMakeLists.txt  lads.cpp  lads.h  maat.cpp  maat.h  occ.cpp  plock.cpp  plock.h  row_lock.cpp  row_lock.h  row_maat.cpp  row_mvcc.cpp  row_silo.cpp  row_silo.h  row_ts.cpp  silo.cpp
conf/: CMakeLists.txt  site.yml  site_deploy_sample.yml
exp_results/2017-06-27-11-59-40-PM/: NOWAIT_s_t0_0.txt  NOWAIT_s_t0_102.txt  NOWAIT_s_t0_105.txt  NOWAIT_s_t0_108.txt  NOWAIT_s_t0_111.txt  NOWAIT_s_t0_114.txt  NOWAIT_s_t0_117.txt  NOWAIT_s_t0_12.txt  NOWAIT_s_t0_120.txt  NOWAIT_s_t0_123.txt  NOWAIT_s_t0_126.txt  NOWAIT_s_t0_129.txt  NOWAIT_s_t0_132.txt  NOWAIT_s_t0_135.txt  NOWAIT_s_t0_138.txt  NOWAIT_s_t0_141.txt  NOWAIT_s_t0_144.txt  NOWAIT_s_t0_147.txt  NOWAIT_s_t0_15.txt  NOWAIT_s_t0_150.txt  NOWAIT_s_t0_153.txt  NOWAIT_s_t0_156.txt  NOWAIT_s_t0_159.txt  NOWAIT_s_t0_162.txt  NOWAIT_s_t0_165.txt  NOWAIT_s_t0_168.txt  NOWAIT_s_t0_171.txt  NOWAIT_s_t0_174.txt  NOWAIT_s_t0_177.txt  NOWAIT_s_t0_18.txt  NOWAIT_s_t0_180.txt  NOWAIT_s_t0_183.txt  NOWAIT_s_t0_186.txt  NOWAIT_s_t0_189.txt  NOWAIT_s_t0_192.txt  NOWAIT_s_t0_195.txt  NOWAIT_s_t0_198.txt  NOWAIT_s_t0_201.txt  NOWAIT_s_t0_204.txt  NOWAIT_s_t0_207.txt  (+193 more)
halstead/: README.md  genIfconfig.py  monitorThreads.sh  setupDenevaScripts.py  setupNodesIPs.sh
paxos/: CMakeLists.txt  paxos.cc  paxos.h
pynb/: QueCC.ipynb  Untitled.ipynb  final_exps.ipynb  ycsb-bsize-theta0-M64
pynb/.ipynb_checkpoints/: QueCC-checkpoint.ipynb
scripts/: CMakeLists.txt  test_local.py
site/: site.yml
statistics/: CMakeLists.txt  stats.cpp  stats.h  stats_array.cpp  stats_array.h
storage/: CMakeLists.txt  index_base.h  index_btree.cpp  index_btree.h  index_hash.cpp  index_hash.h  row.cpp  row.h  smanager.cpp  smanager.h  table.cpp
system/: CMakeLists.txt  abort_queue.cpp  abort_queue.h  abort_thread.cpp  abort_thread.h  array.h  calvin_thread.cpp  calvin_thread.h  client_thread.cpp  global.cpp  global.h  helper.cpp  helper.h  io_thread.cpp  io_thread.h  main.cpp  manager.cpp  mem_alloc.cpp  mem_alloc.h  msg_queue.cpp  parser.cpp  pool.cpp  pool.h  quecc_thread.cpp  quecc_thread.h  query.h  sequencer.cpp  sequencer.h  sim_manager.cpp  sim_manager.h  spinlock.h  thread.cpp  thread.h  txn.cpp  txn.h  txn_table.cpp  txn_table.h  wl.cpp  wl.h  work_queue.cpp  (+3 more)
test/: CMakeLists.txt  basic_tests.cpp  gp_test.cpp  memory_test.cpp  paxos_test.cpp  sync_test.cpp  test_config.yml  test_config2.yml  test_zk_only_config.yml  yaml_test.cpp
transport/: CMakeLists.txt  message.cpp  message.h  msg_thread.cpp  msg_thread.h  transport.cpp  transport.h
util/: CMakeLists.txt  config_yaml.cpp  config_yaml.h  lads_logging.cpp  lads_logging.h  lads_spin_lock.h
